<resources>
    <string name="app_name">Geography Quizz</string>
    <string name="intro_string">Test your geography knowledge!</string>
    <string name="go_btn_string">GO</string>
    <string name="quest1_text">On which continent is Tripoli located?</string>
    <string name="quest1_radiobtn1_text">Asia</string>
    <string name="quest1_radiobtn2_text">Africa</string>
    <string name="quest1_radiobtn3_text">Australia</string>
    <string name="quest1_radiobtn4_text">Europa</string>
    <string name="quest1_label">Question 1</string>
    <string name="next_btn_text">Next</string>
    <string name="quest2_label">Question 2</string>
    <string name="quest2_text">Which country has the longest coastline in the world?</string>
    <string name="quest2_radiobtn1_text">Brazil</string>
    <string name="quest2_radiobtn2_text">Australia</string>
    <string name="quest2_radiobtn3_text">Canada</string>
    <string name="quest2_radiobtn4_text">Rusia</string>
    <string name="quest3_label">Question 3</string>
    <string name="quest3_text">What is highest waterfall in the world?</string>
    <string name="quest3_radiobtn1_text">Victoria Falls</string>
    <string name="quest3_radiobtn2_text">Angel Falls</string>
    <string name="quest3_radiobtn3_text">Niagara Falls</string>
    <string name="quest3_radiobtn4_text">Gullfoss Falls</string>
    <string name="quest4_label">Question 4</string>
    <string name="quest4_text">The largest volcano on Earth is located where?</string>
    <string name="quest4_radiobtn1_text">Hawaii</string>
    <string name="quest4_radiobtn2_text">Italy</string>
    <string name="quest4_radiobtn3_text">Japan</string>
    <string name="quest4_radiobtn4_text">Indonesia</string>
    <string name="quest5_text">Which river flows through the Grand Canyon?</string>
    <string name="quest5_radiobtn1_text">Missouri</string>
    <string name="quest5_radiobtn2_text">Rio Grande</string>
    <string name="quest5_radiobtn3_text">Mississippi</string>
    <string name="quest5_radiobtn4_text">Colorado</string>
    <string name="quest5_label">Question 5</string>
    <string name="try_again_btn_text">Try Again</string>
    <string name="txt_view_final_message_text">Your test is finished</string>
    <string name="quest6_check_text">Select the contries which are members of European Union:</string>
    <string name="quest6_check_box1_text">France</string>
    <string name="quest6_check_box2_text">Switzerland</string>
    <string name="quest6_check_box3_text">Austria</string>
    <string name="quest6_check_box4_text">Latvia</string>
    <string name="quest6_for_edit_txt_text">Write down the year when EU was established:</string>
    <string name="edit_txt_hint">YYYY</string>
    <string name="submit_btn_text">Submit my answers</string>
    <string name="quest6_check_text_land">Select EU members:</string>
    <string name="final_title_txt_view_message_text">You have reached the end of this Quiz!</string>
    <string name="correct_answer_enum_text_view_message">Beellow you may see the correct answers to our quiz:</string>
    <string name="correct_answer1_text_view_message">1.Tripoli is located in Africa</string>
    <string name="correct_answer2_text_view_message">2.Canada has the longest coastline in the world.</string>
    <string name="correct_answer3_text_view_message">3.Angel Falls is in Venezuela and has a height of 3,212 feet and a plunge of 2,648 feet.</string>
    <string name="correct_answer4_text_view_message">4.Mauna Loa, one of the five volcanoes that formed the Hawaiian Island chain, is the largest in the world.</string>
    <string name="correct_answer5_text_view_message">5.Over millions of years, erosion caused by the flowing Colorado River formed the Grand Canyon.</string>
    <string name="correct_answer6_text_view_message">6.Currently the EU members are: Austria, Belgium, Bulgaria, Croatia, Cyprus, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, Ireland, Italy, Latvia, Lithuania, Luxembourg, Malta, Netherlands, Poland, Portugal, Romania, Slovakia, Slovenia, Spain, Sweden and United Kingdom.</string>
    <string name="correct_answer7_text_view_message">7.The European Union was formely established when the Masstrich Treaty came into force on 1 November 1993.</string>
</resources>
