<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <ImageView
        android:src="@drawable/eu1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/linear_layout_quest61"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest6_check_text"
            android:textSize="@dimen/quest_text_size"
            android:layout_marginTop="@dimen/quest6_margin_vertical"
            android:layout_marginLeft="@dimen/quest_margin_horizontal"
            android:layout_marginRight="@dimen/quest_margin_horizontal"
            android:paddingTop="@dimen/quest6_txt_padding"
            android:paddingStart="@dimen/quest6_txt_padding"
            android:paddingEnd="@dimen/quest6_txt_padding"
            android:textColor="@color/eu_color"
            android:background="@color/eu_txt_background"/>

            <CheckBox
                android:id="@+id/quest6_check_box_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest6_check_box1_text"
                android:textColor="@color/eu_color"
                android:textSize="@dimen/radio_btn_txt_size"
                android:layout_marginLeft="@dimen/answers6_margin_horizontal"
                android:layout_marginRight="@dimen/answers6_margin_horizontal"
                android:paddingStart="@dimen/quest6_txt_padding"
                android:paddingEnd="@dimen/quest6_txt_padding"
                android:background="@color/eu_txt_background"/>

            <CheckBox
                android:id="@+id/quest6_check_box_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest6_check_box2_text"
                android:textColor="@color/eu_color"
                android:textSize="@dimen/radio_btn_txt_size"
                android:layout_marginLeft="@dimen/quest_margin_horizontal"
                android:layout_marginRight="@dimen/quest_margin_horizontal"
                android:paddingStart="@dimen/quest6_txt_padding"
                android:paddingEnd="@dimen/quest6_txt_padding"
                android:background="@color/eu_txt_background"/>

            <CheckBox
                android:id="@+id/quest6_check_box_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest6_check_box3_text"
                android:textColor="@color/eu_color"
                android:textSize="@dimen/radio_btn_txt_size"
                android:layout_marginLeft="@dimen/quest_margin_horizontal"
                android:layout_marginRight="@dimen/quest_margin_horizontal"
                android:paddingStart="@dimen/quest6_txt_padding"
                android:paddingEnd="@dimen/quest6_txt_padding"
                android:background="@color/eu_txt_background"/>

            <CheckBox
                android:id="@+id/quest6_check_box_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest6_check_box4_text"
                android:textColor="@color/eu_color"
                android:textSize="@dimen/radio_btn_txt_size"
                android:layout_marginLeft="@dimen/quest_margin_horizontal"
                android:layout_marginRight="@dimen/quest_margin_horizontal"
                android:paddingStart="@dimen/quest6_txt_padding"
                android:paddingEnd="@dimen/quest6_txt_padding"
                android:background="@color/eu_txt_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest6_for_edit_txt_text"
            android:textSize="@dimen/quest_text_size"
            android:layout_marginTop="@dimen/edit_txt_question_margin_top"
            android:layout_marginLeft="@dimen/quest_margin_horizontal"
            android:layout_marginRight="@dimen/quest_margin_horizontal"
            android:textColor="@color/eu_color"
            android:paddingStart="@dimen/quest6_txt_padding"
            android:paddingEnd="@dimen/quest6_txt_padding"
            android:background="@color/eu_txt_background"/>

        <EditText
            android:id="@+id/edit_txt_id"
            android:inputType="number"
            android:layout_marginLeft="@dimen/answers6_margin_horizontal"
            android:layout_marginRight="@dimen/answers6_margin_horizontal"
            android:layout_marginBottom="@dimen/edit_txt_margin_bottom"
            android:textSize="@dimen/edit_txt_text_size"
            android:hint="@string/edit_txt_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/eu_color"
            android:background="@color/eu_txt_background"
            android:paddingStart="@dimen/quest6_txt_padding"
            android:paddingEnd="@dimen/quest6_txt_padding"/>

</LinearLayout>


    <Button
        android:id="@+id/next_button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_btn_text"
        android:layout_marginBottom="@dimen/next_btn_margin_vertical"
        android:layout_below="@+id/linear_layout_quest61"
        android:layout_centerInParent="true"
        android:enabled="false"
        android:onClick="onNextButtonClicked"/>


</RelativeLayout>
